Incluing CATALINA_OPTS env variable in dockefile